# TechnoHW_1

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
project/head/: data.h
project/src/: data.c  main.c  print.c  recomend.c
project/tests/: test.cpp
